# cricket-agent

./: .gitignore  README.md  pyproject.toml
data-store/: README.md
data-store/matches/: README.txt
scripts/: download.py
