[project]
name = "cricket-agent"
version = "0.1.0"
description = "Analyze cricket data for insights"
authors = [
    {name = "MadaraUchiha-314",email = "rohithr31+github@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"


